tests/baselines/reference/jsDeclarationsTypeReassignmentFromDeclaration2.errors.txt
index.js(1,1): error TS9006: Declaration emit for this file requires using private name 'Item' from module '"some-mod"'. An explicit type annotation may unblock declaration emit.


==== index.js (1 errors) ====
    const items = require("./some-mod")();
    ~~~~~
!!! error TS9006: Declaration emit for this file requires using private name 'Item' from module '"some-mod"'. An explicit type annotation may unblock declaration emit.
    module.exports = items;
==== some-mod.d.ts (0 errors) ====
    interface Item {
        x: string;
    }
    declare function getItems(): Item[];
    export = getItems;